fix links are not wrapping in webkit

--- a/assets/stylus/parts/base.styl
+++ b/assets/stylus/parts/base.styl
@@ -63,6 +63,8 @@ table,
 ul
   margin-bottom 1rem
 
-p,
-p img
+p
   max-width 100%
+  word-wrap break-word
+  img
+    max-width 100%
